# particle_sim

./: Cargo.toml
particle_sim/: Cargo.toml
particle_sim/src/: entity.rs  main.rs  renderer.rs  sim.rs
quarkstrom/: Cargo.toml  README.md
quarkstrom/src/: gui.rs  lib.rs  types.rs
quarkstrom/src/shaders/: circle.wgsl  line.wgsl
