[package]
name = "particle_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quarkstrom = {path = "../quarkstrom" }
winit_input_helper = "0.14.1"
egui = "0.22.0"
ultraviolet = "0.9.2"
lazy_static = "1.4.0"
rand = "0.8.5"
